Changed back to relative references, and got rid of unneeded image.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta name="description" content="Lorem Ipsum à la Burning Man Style">
   <meta name="author" content="Jeremy Perry (htts://github.com/jeremyrperry)">
 
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
   <header>
-    <img src="/img/bm-logo-transparent.png" id="bm_logo" />
+    <img src="img/bm-logo.png" id="bm_logo" />
     <h1>Playa Ipsum</h1>
     <h2>Lorem Ipsum à la Burning Man Style</h2>
   </header>
@@ -30,7 +30,7 @@
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="/js/glossary.js"></script>
-  <script src="/js/playaipsum.js"></script>
+  <script src="js/glossary.js"></script>
+  <script src="js/playaipsum.js"></script>
 </body>
 </html>
