--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Lorem Ipsum à la Burning Man Style">
   <meta name="author" content="Jeremy Perry (htts://github.com/jeremyrperry)">
 
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" />
   <link rel="stylesheet" href="css/style.css">
 
 </head>
