Removed logo, and modified favicon.ico.

--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
   <title>Playa Ipsum</title>
   <meta name="description" content="Lorem Ipsum à la Burning Man Style">
   <meta name="author" content="Jeremy Perry (htts://github.com/jeremyrperry)">
-
   <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" />
   <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
   <header>
-    <img src="img/bm-logo.png" id="bm_logo" />
     <h1>Playa Ipsum</h1>
     <h2>Lorem Ipsum à la Burning Man Style</h2>
   </header>
@@ -27,9 +24,12 @@
 
   <div id="ipsum"></div>
   <div>
-      <a href="https://www.github.com/jeremyrperry/playaipsum" target="_blank"><img src="img/octocat.png" id="octocat" alt="Fork me on GitHub" title="Fork me on GitHub!"/></a> </div>
+      <a href="https://www.github.com/jeremyrperry/playaipsum" target="_blank"><img src="img/octocat.png" id="octocat" alt="Fork me on GitHub" title="Fork me on GitHub!"/></a>
+  </div>
   <div>
-    <i>Photo courtesy:</i> <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@annejames?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Anne James"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Anne James</span></a>
+    <i>Background photo courtesy:</i> <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@annejames?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Anne James"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Anne James</span></a>
+      <br />
+      This is an open source non-commercial project.  Please feel free to contribute or use for your own needs so long as they are non-commercial in nature.
   </div>
 
 
