--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Playa Ipsum</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Lorem Ipsum à la Burning Man Style">
   <meta name="author" content="Jeremy Perry (htts://github.com/jeremyrperry)">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" />
